dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    link.argocd.argoproj.io/external-link: "http://app1.com:8080"
spec:
  ingressClassName: nginx
  rules:
  - host: app1.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: app-service
            port:
              number: 8888
